@@ -4,7 +4,8 @@ and the MD5 hash of the same [values]?
 
 # Current Implementation
 
-* **`gradle run`** <br>with no arguments, default to 5 (new) UUIDs, create and save [default file `uuids.json`]
+* **`gradle run`** <br>with no arguments, default to 5 (new) UUIDs, create some random
+and save [default file `uuids.json`]; sort the values and show them, and 'calculate' the MD5 hash.
 
     * `-c <count>`
         create _`<count>`_ UUID values
@@ -17,6 +18,15 @@ To specify command line args thru gradle, include **`--args="..."`**;
 (E.g. `gradle run --args="-c 10"` to pass a count of 10 to the prog.)
 
 Currently, no statistical analysis is done.
+
+### Warnings
+You will get the warming:
+
+  WARNING: An illegal reflective access operation has occurred
+  WARNING: Illegal reflective access by com.google.gson.internal.reflect.UnsafeReflectionAccessor (file:/Users/gparks/.gradle/caches/modules-2/files-2.1/com.google.code.gson/gson/2.8.6/9180733b7df8542621dc12e21e87557e8c99b8cb/gson-2.8.6.jar) to field java.security.MessageDigest.algorithm
+  WARNING: Please consider reporting this to the maintainers of com.google.gson.internal.reflect.UnsafeReflectionAccessor
+  WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+  WARNING: All illegal access operations will be denied in a future release
 
 
 ### "Analysis"
